# faktencheck

./: Dockerfile  README.md  api_chatgpt.ipynb  pyproject.toml  test_streamlit.py
.github/workflows/: test.yml
lambda/: lambda_function.py
